Few Color changes

--- a/src/app/routes/results/results.component.html
+++ b/src/app/routes/results/results.component.html
@@ -14,4 +14,4 @@
   
 
 
-<a class="PlayAgain" routerLink="choice"><h1 class="menu_links" >Play Again...</h1></a>
+<button class="PlayAgain" routerLink="choice"><h1 class="menu_links" >Play Again...</h1></button>
