--- a/src/app/routes/results/results.component.css
+++ b/src/app/routes/results/results.component.css
@@ -32,7 +32,7 @@
   
   .result{
     font-size: 40px;
-    color: rgb(252, 55, 153);
+    color:rgb(58, 255, 212);
     text-align: center;
     font-weight: bold;
   }
@@ -62,10 +62,11 @@
     margin: 50px 0;
   }
   .PlayAgain{
+    background-color: aqua;
     text-align: center;
     color: rgb(252, 55, 153);
     font-weight: bold;
-    font-size: 30px;
+    font-size: 15px;
     padding: 20px;
 
 
