--- a/src/app/routes/results/results.component.css
+++ b/src/app/routes/results/results.component.css
@@ -61,15 +61,17 @@
     font-size: 30px;
     margin: 50px 0;
   }
+  
   .PlayAgain{
     background-color: aqua;
+    font-family: sans-serif;
     text-align: center;
     color: rgb(252, 55, 153);
     font-weight: bold;
     font-size: 15px;
-    padding: 20px;
-
-
+    padding: 10px;
+    margin-top: 20px;
+    
   }
 
   .menu_links {
