--- a/src/app/routes/results/results.component.html
+++ b/src/app/routes/results/results.component.html
@@ -1,17 +1,15 @@
-
-
 <div class="score-board">
-    <div class="badge" id="user-label">Player: {{rockService.userSelection}}</div>
-    <div class="badge" id="comp-label">Comp: {{rockService.compSelection}}</div>
-    <!-- <span id="user-score">{{rockService.userScore}}</span>:<span id="comp-score">{{rockService.compScore}}</span> -->
+    <div class="badge" id="user-label">Player: </div>
+    <div class="badge" id="comp-label">Comp: </div>
+    <span id="user-score">{{rockService.userSelection}}</span>:<span id="comp-score">{{rockService.compSelection}}</span>
 </div>
 
 <div class="result">
-    <p *ngIf="rockService.Result">{{rockService.userSelection}} {{rockService.userSelection}} {{rockService.compSelection}}{{rockService.Resultng}} </p>
+     
   
   
 
-  <h1>{{rockService.userSelection}}</h1>
+  <h1>{{rockService.gameResult}}</h1>
 
   
 
