--- a/src/app/routes/choice/choice.component.html
+++ b/src/app/routes/choice/choice.component.html
@@ -1,8 +1,4 @@
-<!-- <div class="score-board">
-    <div class="badge" id="user-label">Player: {{userSelected}}</div>
-    <div class="badge" id="comp-label">Comp: {{compSelected}}</div>
-   
-</div> -->
+
 
 
 <div class="result">
@@ -11,13 +7,13 @@
   
   <div class="choices">
     <div class="choice" id="rock">
-      <img src="../assets/Rocks.JPG" (click)='userPick("rock")'>
+      <img src="../assets/Rocks.JPG" (click)='userPick("Rock")'>
     </div>
     <div class="choice" id="paper">
-      <img src="../assets/Paper.JPG" (click)='userPick("paper")'>
+      <img src="../assets/Paper.JPG" (click)='userPick("Paper")'>
     </div>
     <div class="choice" id="scissors">
-      <img src="../assets/Scissors.JPG" (click)='userPick("scissors")'>
+      <img src="../assets/Scissors.JPG" (click)='userPick("Scissors")'>
     </div>
   </div>
   
