--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
 
+<form>
+    <div class="Username">
+      <label>Username  </label>
+      <input type="text" name="username">
+ 
+    </div>
+  </form>
 <router-outlet></router-outlet>
