--- a/src/app/routes/results/results.component.html
+++ b/src/app/routes/results/results.component.html
@@ -14,6 +14,6 @@
   
 
 
-<button class="PlayAgain" routerLink="choice"><h1 class="menu_links"> Play Again.. </h1><button>
+<button class="PlayAgain" routerLink="choice"><h1 class="menu_links"> Play Again..</h1> </button>
 
 
