--- a/src/app/routes/choice/choice.component.html
+++ b/src/app/routes/choice/choice.component.html
@@ -1,6 +1,8 @@
 
 
 
+<app-username></app-username>
+
 <div class="result">
     <p *ngIf="status">{{userSelected}} {{action}} {{compSelected}}{{status}} </p>
   </div>
