--- a/src/app/routes/results/results.component.html
+++ b/src/app/routes/results/results.component.html
@@ -1,5 +1,9 @@
+
+
+
+
 <div class="score-board">
-    <div class="badge" id="user-label">Player: </div>
+    <div class="badge" id="user-label">Player:{{rockService.userName}} </div>
     <div class="badge" id="comp-label">Comp: </div>
     <span id="user-score">{{rockService.userSelection}}</span>:<span id="comp-score">{{rockService.compSelection}}</span>
 </div>
@@ -15,5 +19,8 @@
 
 
 <button class="PlayAgain" routerLink="choice"><h1 class="menu_links"> Play Again..</h1> </button>
+
+
+<button class="PlayAgain" routerLink="/Scoreboard"><h1 class="menu_links"> View Reports</h1> </button>
 
 
