--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,20 @@
   *{
-    margin: 2px;
-    padding: 2px;
+   
+    margin: 1px;
+    padding: 5px;
     box-sizing: border-box;
   }
   body{
+    
+    margin: 10px;
     background: rgb(80, 211, 235);
     background-image: url("/assets/rockAndScissor.png");
+    background-size: 170px;
+    
   }
   header{
     background: white;
-    padding: 20px;
+    padding: 30px;
     text-align: center;
     font-size: 20px;
   }
