--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
 
 <router-outlet></router-outlet>
 
-<a routerLink="Scoreboard" (click)="LoadReport()">report</a>
+<a class="ScoreReport" routerLink="Scoreboard" (click)="LoadReport()">Leader Board Report</a>
 
