--- a/src/app/routes/results/results.component.html
+++ b/src/app/routes/results/results.component.html
@@ -4,7 +4,7 @@
 
 <div class="score-board">
     <div class="badge" id="user-label">Player:{{rockService.userName}} </div>
-    <div class="badge" id="comp-label">Comp: </div>
+    <div class="badge" id="comp-label">Comp:Artificially Intelligent </div>
     <span id="user-score">{{rockService.userSelection}}</span>:<span id="comp-score">{{rockService.compSelection}}</span>
 </div>
 
@@ -18,7 +18,7 @@
   
 
 
-<button class="PlayAgain" routerLink="choice"><h1 class="menu_links"> Play Again..</h1> </button>
+<button class="PlayAgain" routerLink="rounds"><h1 class="menu_links"> Play Again..</h1> </button>
 
 
 <button class="PlayAgain" routerLink="/Scoreboard"><h1 class="menu_links"> View Reports</h1> </button>
