--- a/src/app/routes/Scoreboard/scoreboard/scoreboard.component.css
+++ b/src/app/routes/Scoreboard/scoreboard/scoreboard.component.css
@@ -6,7 +6,7 @@
   border: 2px solid white;
   color: rgb(248, 133, 2);
   height: 700px;
-  width: 700px;
+  width: 1000px;
   border-radius: 4px;
   text-align: center;
   font-size: 46px;
@@ -19,8 +19,9 @@
   text-align: center;
   color: rgb(241, 150, 13);
   font-weight: bold;
-  font-size: 30px;
-  margin: 50px 0;
+  font-size: 10px;
+  display: inline;
+  float: left;
 }
 
 
@@ -55,4 +56,27 @@
 
   position: center;
 
+}
+
+.headings {
+  
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    display: inline-block;
+    color: rgb(248, 133, 2);
+    font-size: 14px;
+    padding: 15px 20px;
+    border-block-end-style: double; 
+  
+
+}
+
+.Username {
+
+
+
+
+}
+
+table {
+  width: 100%;
 }
