--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,13 @@
   }
   header{
     background: white;
+    background-image: url("/assets/RPSmain.jpg");
     padding: 30px;
     text-align: center;
     font-size: 20px;
+    color: rgb(0, 0, 0);
+    font-family: fantasy;
+    background-color: lemonchiffon;
+    
+    
   }
