--- a/src/app/routes/results/results.component.html
+++ b/src/app/routes/results/results.component.html
@@ -1,21 +1,36 @@
 
+ <div class="mid">
 
-
-
-<div class="score-board">
-    <div class="badge" id="user-label">Player:{{rockService.userName}} </div>
-    <div class="badge" id="comp-label">Comp:Artificially Intelligent </div>
-    <span id="user-score">{{rockService.userSelection}}</span>:<span id="comp-score">{{rockService.compSelection}}</span>
+  <div class="box">
+  <h1>{{rockService.gameResult}}</h1>
 </div>
 
-<div class="result">
+
+<div class="box" *ngFor="let res of rockService.gameresultArray">
+  
+    
+    <div class="inline"><img src="assets/{{res.playerChoice}}.JPG" width="120px" height="120px"></div>
+    
+    <div class="inline"><img src="assets/VS.jpg"
+      width="120x" height="120px"></div>
+    <div class="inline"><img src="assets/{{res.comChoice}}.JPG" width="120px" height="120px"></div>
+  
+  <!--<div class="badge" id="user-label">Player:{{rockService.userName}} </div> <div class="badge" id="comp-label">Comp:Artificially Intelligent </div> -->
+    <h3  id="action-message">{{rockService.userName}} Selection is {{res.playerChoice}} : Computer: Selection is {{res.comChoice}}</h3>
+</div>
+<br>
+
+
+  <ng-container *ngFor="let fr of rockService.gameresultArray">
+    <div *ngIf="fr.finalGameResult !== null">
+    <h2  id="action-message"> {{rockService.userName}} Your Result Is: {{fr.finalGameResult}}</h2>
+    </div>
+  </ng-container>
      
   
   
 
-  <h1>{{rockService.gameResult}}</h1>
-
-  
+ 
 
 
 <button class="PlayAgain" routerLink="rounds"><h1 class="menu_links"> Play Again..</h1> </button>
@@ -24,3 +39,4 @@
 <button class="PlayAgain" routerLink="/Scoreboard"><h1 class="menu_links"> View Reports</h1> </button>
 
 
+</div>
