--- a/src/app/routes/results/results.component.css
+++ b/src/app/routes/results/results.component.css
@@ -79,3 +79,24 @@
   .menu_links {
     cursor: pointer;
 }
+
+
+  
+.box {
+  width: 300px;
+  height: 100px;
+  margin: 20px;
+  display: inline;
+  cursor: pointer;
+}
+
+.inline {
+  display: inline;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+
+.mid {
+  text-align: center;
+}
