--- a/src/app/routes/rounds/rounds.component.html
+++ b/src/app/routes/rounds/rounds.component.html
@@ -6,13 +6,13 @@
   
   <div class="choices">
     <div class="choice" id="rock">
-      <img src="../assets/onee.JPG" (click)='roundsPick("One")'>
+      <img src="../assets/onee.JPG" (click)='roundsPick(1)'>
     </div>
     <div class="choice" id="paper">
-      <img src="../assets/threee.JPG" (click)='roundsPick("Three")'>
+      <img src="../assets/threee.JPG" (click)='roundsPick(3)'>
     </div>
     <div class="choice" id="scissor">
-      <img src="../assets/fivee.JPG" (click)='roundsPick("Five")'>
+      <img src="../assets/fivee.JPG" (click)='roundsPick(5)'>
     </div>
   </div>
   
